Index.html and helloworld update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="." />
     <meta property="og:title" content="Pyodide Tutorial" />
+    <meta property="og:author" content="Abram Hindle" />
     <style>
       body, button {
         font-size: 200%;
@@ -22,7 +23,11 @@
       <li><a href="./01-helloworld">01 Hello World</a></li>
       <li><a href="./02-eval">02 Eval</a></li>
       <li><a href="./03-micropip">03 Micropip!</a></li>
-      <li><a href="./04-loading-scripts">04 Loading Scripts!</a></li>      
+      <li><a href="./04-loading-scripts">04 Loading Scripts!</a>
+        <ul>
+          <li><a href="./04-loading-scripts/script.py">The script that will be loaded.</a>
+        </ul>
+      </li>      
     </ul>
     <h1>Examples</h1>
     <ul>
